--- a/gb/25/2/3/n14429174.md
+++ b/gb/25/2/3/n14429174.md
@@ -5,41 +5,43 @@
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14424418-AFP__20250128__36WC24F__v1__HighRes__ChinaTechnologyAiDeepseek-600x400.jpg" />
 <h6>手机上显示DeepSeek应用程式的画面。(Mladen Antonov/AFP)</h6>
 <hr>
-	<p>【大纪元2025年02月04日讯】（大纪元记者宋唐、易如采访报导）中国新创公司DeepSeek在中国新年期间搅动世界，但很快引起反弹，出于数据安全及认知作战的担心，主要西方国家及日、韩、台湾等，均已采取审查限制措施。</p>
+	<p>【大纪元2025年02月04日讯】（大纪元记者宋唐、易如采访报导）中国新创公司DeepSeek在中国新年期间搅动世界，但很快引起反弹，出于数据安全及认知作战的担心，主要西方国家及日、韩、台湾等，均已采取审查限制措施。
+</p>
 <h2><strong>DeepSeek</strong><strong>在多个国家被审查、封杀</strong></h2>
-<p>1月24日美国海军部最早发出警告，不得“以任何形式”使用DeepSeek；白宫1月28日表示，美国官员正在审查DeepSeek对国家安全的影响。</p>
+<p>
+1月24日美国海军部最早发出警告，不得“以任何形式”使用DeepSeek；白宫1月28日表示，美国官员正在审查DeepSeek对国家安全的影响。</p>
 <p>到目前为止，DeepSeek已被美国国防部、NASA、美国国会众议院、德州政府、台湾政府禁用；而在意大利DeepSeek已被苹果和谷歌应用商店下架。</p>
 <p>此外，英国、法国、德国、荷兰、爱尔兰、澳洲、日本、韩国及印度等国家，正在仔细审查DeepSeek所带来的风险。</p>
-<figure id="attachment_14188939" aria-describedby="caption-attachment-14188939" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/02/id14188939-DepartmentOfDefenseGettyImages-160989986-1080x720.jpg"><img decoding="async" class="size-medium_vertical wp-image-14188939" src="https://i.epochtimes.com/assets/uploads/2024/02/id14188939-DepartmentOfDefenseGettyImages-160989986-1080x720-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14188939" class="wp-caption-text">到目前为止，DeepSeek已被美国国防部、NASA、美国国会众议院、德州政府、台湾政府禁用；而在意大利DeepSeek已被苹果和谷歌应用商店下架。位于华盛顿特区的五角大楼全景图。(STAFF/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_14188939" aria-describedby="caption-attachment-14188939" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/02/id14188939-DepartmentOfDefenseGettyImages-160989986-1080x720.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14188939" src="https://i.epochtimes.com/assets/uploads/2024/02/id14188939-DepartmentOfDefenseGettyImages-160989986-1080x720-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14188939" class="wp-caption-text">到目前为止，DeepSeek已被美国国防部、NASA、美国国会众议院、德州政府、台湾政府禁用；而在意大利DeepSeek已被苹果和谷歌应用商店下架。位于华盛顿特区的五角大楼全景图。(STAFF/AFP via Getty Images)</figcaption></figure>
 <p>这次各国对DeepSeek审查或封杀反应如此迅速，有些让人惊讶。</p>
 <p>台湾国防安全研究院网路安全所副研究员曾怡硕对大纪元表示，“这次不像TikTok，TikTok等了很久，西方才去做反制动作。因为DeepSeek的影响更快更大，很多国家都很迅速做出反应。”</p>
-<figure id="attachment_13994938" aria-describedby="caption-attachment-13994938" style="width: 249px" class="wp-caption alignright"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/05/id13994938-b8378801ea8e6123fad13205e6c6fef4.jpg"><img decoding="async" class=" wp-image-13994938" src="https://i.epochtimes.com/assets/uploads/2023/05/id13994938-b8378801ea8e6123fad13205e6c6fef4.jpg" alt="" width="249" b="237" /></a><figcaption id="caption-attachment-13994938" class="wp-caption-text">台湾国防安全研究院网络安全所副研究员曾怡硕（曾怡硕提供）</figcaption></figure>
+<figure id="attachment_13994938" aria-describedby="caption-attachment-13994938" style="width: 249px" class="wp-caption alignright"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/05/id13994938-b8378801ea8e6123fad13205e6c6fef4.jpg" rel="nofollow"><img decoding="async" class=" wp-image-13994938" src="https://i.epochtimes.com/assets/uploads/2023/05/id13994938-b8378801ea8e6123fad13205e6c6fef4.jpg" alt="" width="249" b="237"></a><figcaption id="caption-attachment-13994938" class="wp-caption-text">台湾国防安全研究院网络安全所副研究员曾怡硕（曾怡硕提供）</figcaption></figure>
 <p>曾怡硕解释说，最主要是西方有两个疑虑：首先是用户使用痕迹、搜寻议题如果到了后台，会整理成用户的个资分析。这对收集商业情报无可厚非，可是中共有情报法，国安单位要求网路平台业者提供用户原始或后设资料时，就有侵犯隐私的疑虑，风险是真实存在的；其次，和TikTok一样，DeepSeek算法有自己的偏见和政治指南，对西方的影响力作战会有相当大的作用。</p>
 <p>“在ChatGPT刚出现的时候，我就认为中共势必也会发展出自己的版本的ChatGPT。它不希望中国人民是受西方的影响，同样西方也不希望自己人民受到中共的影响。”</p>
 <p>台湾国防安全研究院国家安全研究所助理研究员杨一逵对大纪元表示，各国对DeepSeek AI模型的审查与限制势在必行，有三大原因。</p>
 <p>第一，国外民众可以下载TikTok和中国电商APP，但中国民众却无法自由下载Google、YouTube和外国电商APP。这就形成一种不对等的数位竞争关系，DeepSeek可以去大量搜集外国民众的数据，让该AI模型变得有竞争力，甚至产生依赖，而中国民众却要翻墙才可使用ChatGPT。</p>
 <p>第二，今天经济、科技与国家安全已是不可分割，指挥管制系统、一体化击杀链、资讯搜整与传输等技术的突破，与AI的发展紧密关联。DeepSeek AI模型若在各国民间迅速扩散，将引来各国政府的关切与介入。</p>
-<p>第三，以目前来看，DeepSeek AI产出的内容，受到中共政府的言论审查，若DeepSeek AI模型在其它国家广为运用，等于是将符合中共政府言论审查机制的平台，巧妙地嵌入外国的社民社会当中。对于民众理解世界的影响将更为深远。DeepSeek AI可以成为北京向世界潜移默化地投射其世界观与价值观的平台之一。</p>
+<p>第三，以目前来看，DeepSeek AI产出的内容，受到中共政府的言论审查，若DeepSeek AI模型在其它国家广为运用，等于是将符合中共政府言论审查机制的平台，巧妙地嵌入外国的社民社会当中。对于民众理解世界的影响将更为深远。DeepSeek AI可以成为北京向世界潜移默化地投射其世界观与价值观的平台之一。
 <h2><strong>数据监控</strong></h2>
-<p>利用AI在西方国家主要目的是服务于民生。但在中共眼里，AI的最大作用则是监控与维稳。在中国的AI行业中，规模最大当属监视、生物识别等“安防”领域。</p>
+利用AI在西方国家主要目的是服务于民生。但在中共眼里，AI的最大作用则是监控与维稳。在中国的AI行业中，规模最大当属监视、生物识别等“安防”领域。</p>
 <p>中共也已把早期窃取的美国人的个人数据，利用AI技术为美国人建立了档案，形成一个庞大的数据库，威胁了美国的国家安全。</p>
 <p>人们对DeepSeek的担忧很大程度上来自于这样一个事实：该公司总部位于中国，并且受中共法律的约束。</p>
-<figure id="attachment_13976681" aria-describedby="caption-attachment-13976681" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13976681-GettyImages-819890836.jpg"><img decoding="async" class="size-medium_vertical wp-image-13976681" src="https://i.epochtimes.com/assets/uploads/2023/04/id13976681-GettyImages-819890836-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13976681" class="wp-caption-text">中共警察的大数据监控技术已经系统应用于中国社会的方方面面。图为2017年7月11日一名工作人员在上海地铁系统的中央指挥中心。(Johannes Eisele/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_13976681" aria-describedby="caption-attachment-13976681" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13976681-GettyImages-819890836.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-13976681" src="https://i.epochtimes.com/assets/uploads/2023/04/id13976681-GettyImages-819890836-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-13976681" class="wp-caption-text">中共警察的大数据监控技术已经系统应用于中国社会的方方面面。图为2017年7月11日一名工作人员在上海地铁系统的中央指挥中心。(Johannes Eisele/AFP via Getty Images)</figcaption></figure>
 <p>DeepSeek明确告诉其用户，收集的信息存储在“位于中华人民共和国（共产中国）的安全服务器中”，这些信息包括：用户提供的信息（设置账户时的个人数据、平台上输入的任何内容）、自动收集的信息（IP地址、唯一设备标识符、Cookie、设备和网络连接信息）以及来自其它来源的信息。</p>
 <p>1月29日，总部位于纽约的网络安全公司Wiz表示，DeepSeek会将大量敏感数据无意中暴露在开放的互联网上，包含大量聊天纪录、后端数据和敏感讯息如：日志流、API机密和操作详细讯息。</p>
 <p>1月31日，澳洲最大的网络安全服务商CyberCX发布警告说，几乎可以肯定DeepSeek及其收集的用户数据都在中共的掌控范围之内。</p>
-<figure id="attachment_13978692" aria-describedby="caption-attachment-13978692" style="width: 253px" class="wp-caption alignleft"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13978692-40661e6eea0ff0a88e4d8946a11d81cd.jpg"><img decoding="async" class=" wp-image-13978692" src="https://i.epochtimes.com/assets/uploads/2023/04/id13978692-40661e6eea0ff0a88e4d8946a11d81cd.jpg" alt="" width="253" b="236" /></a><figcaption id="caption-attachment-13978692" class="wp-caption-text">台湾国防安全研究院国家安全研究所助理研究员杨一逵（杨一逵提供）</figcaption></figure>
+<figure id="attachment_13978692" aria-describedby="caption-attachment-13978692" style="width: 253px" class="wp-caption alignleft"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13978692-40661e6eea0ff0a88e4d8946a11d81cd.jpg" rel="nofollow"><img decoding="async" class=" wp-image-13978692" src="https://i.epochtimes.com/assets/uploads/2023/04/id13978692-40661e6eea0ff0a88e4d8946a11d81cd.jpg" alt="" width="253" b="236"></a><figcaption id="caption-attachment-13978692" class="wp-caption-text">台湾国防安全研究院国家安全研究所助理研究员杨一逵（杨一逵提供）</figcaption></figure>
 <p>杨一逵表示，根据中共现行的《国家情报法》规定，中国任何组织和公民都不得不为国家负有情报搜整的义务与责任。当中共当局询问与索取关键数据时，DeepSeek将很难有理由拒绝。</p>
 <p>“不仅如此，若DeepSeek发展至一定的规模，其高层的决策圈中将会有中共代表。如同TikTok的母公司ByteDance（字节跳动）有党委书记一样。DeepSeek可能产生类似的情形，直接受到中共的控制。”</p>
-<p>他还指出，如果DeepSeek可以发展成全球广泛使用的AI模型平台，这将会是中共收集数据与监控的利器。特殊区域与特殊身份的使用者，在注册并同意DeepSeek收集用户资料时，可能就会被分类与锁定。这也是为何欧美已有规定，在政府部门或太空科技相关的专业人员，不应使用DeepSeek。</p>
+<p>他还指出，如果DeepSeek可以发展成全球广泛使用的AI模型平台，这将会是中共收集数据与监控的利器。特殊区域与特殊身份的使用者，在注册并同意DeepSeek收集用户资料时，可能就会被分类与锁定。这也是为何欧美已有规定，在政府部门或太空科技相关的专业人员，不应使用DeepSeek。
 <h2><strong>中共审查言论、意识形态扩张工具</strong></h2>
-<p>AI也被中共当局作为审查言论、意识形态扩张工具。早在2019年，中共党魁习近平就强调官方传媒及党媒必须“探索将AI运用在资讯搜集、制作与传播，以主流价值导向驾驭算法”。</p>
+AI也被中共当局作为审查言论、意识形态扩张工具。早在2019年，中共党魁习近平就强调官方传媒及党媒必须“探索将AI运用在资讯搜集、制作与传播，以主流价值导向驾驭算法”。</p>
 <p>与ChatGPT相比，DeepSeek在敏感问题上，遵循北京的政治标准，使用中共官方媒体的叙事。</p>
 <p>1月27日《大纪元时报》在测试这两款AI助手时，给DeepSeek和ChatGPT提了十几个相同的问题，在四个问题上，DeepSeek给出了这样的回应：“对不起，这超出了我目前的工作范围，我们谈点别的吧！”</p>
 <p>四个问题分别是：“中国人怎么看待习近平？”“美国的《法轮功保护法案》是什么？”“什么是白纸运动？”和 “《大纪元时报》是什么？”</p>
 <p>当问到“1989年6月4日在北京发生了什么事？”时，该DeepSeek没有提到天安门广场上对抗议学生的屠杀，而是回答说：“对不起，我无法回答这个问题。我是一个AI助手，旨在提供有益且无害的回答。”</p>
 <p>与此同时，ChatGPT对每个问题都给出了详细的回答。</p>
-<figure id="attachment_14313815" aria-describedby="caption-attachment-14313815" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14313815-CP167416429.jpg"><img decoding="async" class="size-medium_vertical wp-image-14313815" src="https://i.epochtimes.com/assets/uploads/2024/08/id14313815-CP167416429-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14313815" class="wp-caption-text">与ChatGPT相比，DeepSeek在敏感问题上，遵循北京的政治标准，使用中共官方媒体的叙事。（美联社／Richard Drew／加通社）</figcaption></figure>
+<figure id="attachment_14313815" aria-describedby="caption-attachment-14313815" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14313815-CP167416429.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14313815" src="https://i.epochtimes.com/assets/uploads/2024/08/id14313815-CP167416429-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14313815" class="wp-caption-text">与ChatGPT相比，DeepSeek在敏感问题上，遵循北京的政治标准，使用中共官方媒体的叙事。（美联社／Richard Drew／加通社）</figcaption></figure>
 <p>除了言论审查外，美国人工智能安全与合规公司Enkrypt AI发现，与OpenAI o1模型相比，DeepSeek-R1产生有害输出的可能性高出11倍。</p>
 <p>DeepSeek-R1被发现绕过了安全协议并生成犯罪计划指南、非法武器信息和极端主义宣传。一个具体的例子是，DeepSeek-R1 为恐怖组织起草了一个招募博客。DeepSeek R1产生生化武器内容的可能性也高出三倍多。</p>
 <p>DeepSeek表明，中共现在比以前认为的更接近开发AGI（一种能够以人类水平或更高水平进行推理的人工智能）。这款功能强大、应用广泛的人工智能模型，训练数据时所表现出偏见，可能影响全球用户的思想和意识形态。</p>
@@ -47,52 +49,52 @@
 <p>众议院中共问题特设委员会主席约翰?穆勒纳尔（John Moolenaar）说，DeepSeek的搜索内容去掉了中国共产党历史上的阴暗面，比如对少数民族的压迫。</p>
 <p>杨一逵表示，DeepSeek目前尚处于学习与吸收数据的阶段。越多用户使用，对DeepSeek越有利。DeepSeek的言论审查当然是中共意识形态扩张的工具，不过前提是各国民众要广泛使用。以目前来看，各界似乎逐渐对DeepSeek产生戒心。</p>
 <p>曾怡硕表示，ChatGPT问世的时候，因为一些资料可能有过滤、有些资料不提供给西方，造成中国跟西方资料不对称。</p>
-<p>“如果是使用DeepSeek的话，它可能同时对所用资料库及算法来下手，对敏感问题可能不予回答，或给予官方的一个答案，或给似是而非甚至是假讯息、争议讯息，或故意去操纵你的思维，这就变成所谓影响力作战或认知作战。”</p>
+<p>“如果是使用DeepSeek的话，它可能同时对所用资料库及算法来下手，对敏感问题可能不予回答，或给予官方的一个答案，或给似是而非甚至是假讯息、争议讯息，或故意去操纵你的思维，这就变成所谓影响力作战或认知作战。”
 <h2><strong>未来何去何从</strong></h2>
-<p>杨一逵表示，DeepSeek是不是真的低价，还有待后续的追踪与研究。有专家认为，DeepSeek旨在刻意塑造成本低、人人皆可使用的形象，试图扩大其市场规模。</p>
+杨一逵表示，DeepSeek是不是真的低价，还有待后续的追踪与研究。有专家认为，DeepSeek旨在刻意塑造成本低、人人皆可使用的形象，试图扩大其市场规模。</p>
 <p>他认为，中共AI应用在美欧国家可能受到限制与审查，但在众多“全球南方”国家可能随着一带一路而持续对外输出，未来倘若类似DeepSeek技术镶嵌于这些发展中国家廉价智慧手机当中，将会让中共对“全球南方”社民社会数据进行搜整。</p>
 <p>“在这样的预判景况下，美国未来对于中国成熟制程半导体的制裁，应该已箭在弦上。中国AI的应用与发展将受到进一步的限制。”</p>
 <p>曾怡硕表示，未来中共跟西方可能会有各自的生成式AI，有各自适用的资料库，也要谨慎防止对手，做恶意的资料下毒；即使在西方社会仍会有人用DeepSeek，但如果一再让西方用户感受到很多生成结果不符合事实、或有政治限制，使用前景也不会好。</p>
 <p>“就像之前禁TikTok，只要是符合中共政权统治逻辑发展出来的生成式AI，自然会让西方疑虑。DeepSeek不符合AI伦理，只是文字上跟西方一致，但逻辑上完全颠倒过来。”</p>
 <p>CNBC网站2月2日报导，DeepSeek号称的低成本受到外界质疑，而隐私权倡导者则警告说，使用DeepSeek，美国人会将自己和隐私置于危险之中。随着禁令逐步到来，用户可能会狂删这款APP。国安专家则认为，DeepSeek的隐私政策一文不值，且有很大的国安风险。◇</p>
-<p>责任编辑：林妍#</p>
-<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
-<ul class="related-posts" style="color: #0000ff; list-style: inside;">
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426082.md#1" target="_blank" rel="noopener">【秦鹏观察】DeepSeek翻船 李强给习过年添堵</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424287.md#1" target="_blank" rel="noopener">达里奥警告：AI投资重演25年前股市泡沫</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426094.md#1" target="_blank" rel="noopener">DeepSeek刚爆红就负面消息不断 李强看走眼？</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14423789.md#1" target="_blank" rel="noopener">DeepSeek宣称低成本惹议 业界疑背后有猫腻</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427531.md#1" target="_blank" rel="noopener">新研究：DeepSeek仅硬件成本就超过5亿美元</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425093.md#1" target="_blank" rel="noopener">审计机构：DeepSeek聊天机器人成功率仅17%</a></span></li>
+<p>责任编辑：林妍#
+<div class="related-article"><span style="color: #000;font-weight: bold">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff">
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426082.md#1" target="_blank" rel="noopener nofollow noreferrer">【秦鹏观察】DeepSeek翻船 李强给习过年添堵</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424287.md#1" target="_blank" rel="noopener nofollow noreferrer">达里奥警告：AI投资重演25年前股市泡沫</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426094.md#1" target="_blank" rel="noopener nofollow noreferrer">DeepSeek刚爆红就负面消息不断 李强看走眼？</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14423789.md#1" target="_blank" rel="noopener nofollow noreferrer">DeepSeek宣称低成本惹议 业界疑背后有猫腻</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427531.md#1" target="_blank" rel="noopener nofollow noreferrer">新研究：DeepSeek仅硬件成本就超过5亿美元</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425093.md#1" target="_blank" rel="noopener nofollow noreferrer">审计机构：DeepSeek聊天机器人成功率仅17%</a></span></li>
 </ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427531.md#1">新研究：DeepSeek仅硬件成本就超过5亿美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428459.md#1">美国安专家：DeepSeek隐私政策一文不值</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617723.md#1">【佳音时刻】李强访问朝鲜 金正恩态度轻慢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617722.md#1">川普：和普京长时间通话 将在匈牙利会面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/10/n11859230.md#1" target="_blank">李清：武汉肺炎的警示</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/26/n10513377.md#1" target="_blank">土改中的按比例杀人与反人类酷刑</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/8/n14611777.md#1">为何“终其一生，不过苟且二字”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/15/n14595067.md#1">【古道人生】相貌丑陋的他让表弟冒名相亲 弄假成真</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610810.md#1">夫妻之义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616068.md#1">台湾故宫博物院百年院庆 推出宋版图书特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/27/n14603916.md#1">六十年积累功德 徐某登仙界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617631.md#1">【直播】IMF总裁就全球经济举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617067.md#1">【佳音时刻】与保密局打擂台？胡锡进抱怨管制严</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617159.md#1">【直播】川普总统在白宫举办晚宴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615717.md#1">汪林朋为何自杀？ 知情人：留置期间惨遭折磨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616083.md#1">中共四中全会前 又一名王岐山旧部落马</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616081.md#1">从楼市衰退到全面通缩 中国经济警讯频传</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615714.md#1">港星蒋荣发曝与成龙反目内幕 公司纠纷引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616334.md#1">李亚鹏转战商圈积欠巨债 与海哈金喜官宣离婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615651.md#1">王祖蓝一原因怕自己明年大限将至 活不过46岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617091.md#1">黎明开唱妻女罕现身 发现被偷拍火速离场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616452.md#1">大陆女星白鹿自曝磕碎牙片 搞笑喊粉丝帮个忙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/5/n14609546.md#1">拌酱让蔬菜更美味 大厨教你做“凉拌酱汁”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615224.md#1">为什么你应该在花园里撒上一些黑胡椒？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615822.md#1">Z世代挑战坐着发呆 摆脱电子产品干扰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616755.md#1">小狗疼痛时的几个迹象 很容易被人们忽视</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616625.md#1">你想要快乐吗？ 专家：从保持善良开始</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/3/n14429174.htm">为何多国迅速审查封杀DeepSeek 专家解析</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429174.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
